<resources>
    <string name="app_name">GB TAKE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="language">Language</string>
    <string name="allow_word" translatable="false">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="id_number">ARC No.</string>
    <string name="check">Check</string>
    <string name="name">Name</string>
    <string name="sex">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birth</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading</string>
    <string name="success">Successful</string>
    <string name="club">Club</string>
    <string name="fail">Failed</string>
    <string name="search">Search</string>
    <string name="sending">Sending</string>
    <string name="select">Select</string>
    <string name="permission_denied">Permission denied</string>
    <string name="error_confirm_password">Incorrect password</string>
    <string name="press_again_to_exit">Press again to leave</string>
    <string name="mobile_service">Service</string>
    <string name="event_list">List</string>
    <string name="quick_repair">Repair</string>
    <string name="repair_record">Repair records</string>
    <string name="rating">Score</string>
    <string name="company">Company</string>
    <string name="government">Government</string>
    <string name="dorm">Dormitory</string>
    <string name="online">On Line</string>
    <string name="offline">Offline</string>
    <string name="turn_to_online">Sure to switch to online?</string>
    <string name="choose_a_staff">Choose an employee</string>
    <string name="all">All</string>
    <string name="processing">Processing</string>
    <string name="finish">Complete</string>
    <string name="select_nothing">Select Nothing</string>
    <string name="server_error">Server no respond</string>
    <string name="no_network">No connection detected</string>
    <string name="time_out">Connection time-out</string>
    <string name="parse_error_json">JSON analysis failed</string>
    <string-array name="choose_picture">
        <item>@string/from_gallery</item>
        <item>@string/camera</item>
    </string-array>
    <string name="can_not_be_empty">Fill out the blank</string>
    <string name="login_account">@string/account</string>
    <string name="login_password">@string/password</string>
    <string name="login_forgot_password">Forget your pass word?</string>
    <string name="login_login">Login</string>
    <string name="login_sign_up">@string/sign_up</string>
    <string name="login_error_account_or_password_not_exist">Invalid account or password</string>
    <string name="login_error_fcm">Login failed(FCM)</string>
    <string name="sign_up_create_account">Create Account</string>
    <string name="sign_up_account">@string/account</string>
    <string name="sign_up_password">@string/password</string>
    <string name="sign_up_confirm_password">Confirm password</string>
    <string name="sign_up_nation">Nationality</string>
    <string name="sign_up_id_number">@string/id_number</string>
    <string name="sign_up_check">@string/check</string>
    <string name="sign_up_name">@string/name</string>
    <string name="sign_up_sex">@string/sex</string>
    <string name="sign_up_sex_male">@string/male</string>
    <string name="sign_up_sex_female">@string/female</string>
    <string name="sign_up_birthday">@string/birthday</string>
    <string name="sign_up_email">@string/email</string>
    <string name="sign_up_phone">@string/phone</string>
    <string name="sign_up_sign_up">@string/sign_up</string>
    <string name="sign_up_error_confirm_password">@string/error_confirm_password</string>
    <string name="sign_up_id_number_can_sign_up">Effective ARC No.</string>
    <string name="sign_up_id_number_can_not_sign_up">Ineffective ARC No.</string>
    <string-array name="nation_name">
        <item>@string/taiwan</item>
        <item>@string/indonesia</item>
        <item>@string/philippine</item>
        <item>@string/thailand</item>
        <item>@string/vietnam</item>
    </string-array>
    <string-array name="nation_code" translatable="false">
        <item>000</item>
        <item>009</item>
        <item>024</item>
        <item>030</item>
        <item>033</item>
    </string-array>
    <string name="main_drawer_life_information">LifeStyle</string>
    <string name="main_drawer_e_commerce">Shopping</string>
    <string name="main_drawer_satisfaction_survey">Happiness</string>
    <string name="main_drawer_event_list">@string/event_list</string>
    <string name="main_drawer_quick_repair">@string/quick_repair</string>
    <string name="main_drawer_chat" translatable="false">@string/chat</string>
    <string name="main_drawer_announcement">Announcement</string>
    <string name="main_drawer_club">@string/club</string>
    <string name="main_drawer_logout">Log out</string>
    <string name="main_drawer_online_setting">Login setting</string>
    <string name="main_drawer_package">Package</string>
    <string name="main_drawer_chart">Repairing Chart</string>
    <string name="main_drawer_repair_record">@string/repair_record</string>
    <string name="main_drawer_medical">Medical Service</string>
    <string name="main_welcome">Welcome</string>
    <string name="profile_name">@string/name</string>
    <string name="profile_email">@string/email</string>
    <string name="profile_change_password">Change my password</string>
    <string name="profile_old_password">Previous Password</string>
    <string name="profile_new_password">New Password</string>
    <string name="profile_confirm_new_password">Confirm new password</string>
    <string name="mobile_service_tab_chat">Call service center</string>
    <string name="mobile_service_tab_event">Event</string>
    <string name="medical_list">Medical List</string>
    <string name="medical_add_medical">Add Medical Event</string>
    <string name="medical_patient_info">Patient Information</string>
    <string name="medical_id_number">@string/id_number</string>
    <string name="medical_check">@string/check</string>
    <string name="medical_blood_type">Blood Type</string>
    <string name="medical_fill_out_date">Date</string>
    <string name="medical_process_status_1">Self assistance</string>
    <string name="medical_process_status_2">Dorm assistance</string>
    <string name="medical_process_status_3">Inform employer</string>
    <string name="medical_process_status_4">Sick leave</string>
    <string-array name="medical_process_status">
        <item>@string/medical_process_status_1</item>
        <item>@string/medical_process_status_2</item>
        <item>@string/medical_process_status_3</item>
        <item>@string/medical_process_status_4</item>
    </string-array>
    <string name="medical_track_process_1">Follow-up</string>
    <string name="medical_track_process_2">Wound Dressing</string>
    <string name="medical_track_process_3">Other</string>
    <string name="medical_track_process_4">Recovered</string>
    <string-array name="medical_track_process">
        <item>@string/medical_track_process_1</item>
        <item>@string/medical_track_process_2</item>
        <item>@string/medical_track_process_3</item>
        <item>@string/medical_track_process_4</item>
    </string-array>
    <string-array name="blood_type_name" translatable="false">
        <item>A</item>
        <item>B</item>
        <item>O</item>
        <item>AB</item>
    </string-array>
    <string-array name="blood_type_code" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="medical_file_upload_1">Signature</string>
    <string name="medical_file_upload_2">Medical Certificate</string>
    <string name="medical_file_upload_3">Diagnosis Certificate</string>
    <string name="medical_file_upload_4">Service Record</string>
    <string name="club_title">@string/club</string>
    <string name="club_add_post">Write a post</string>
    <string name="club_content">Content</string>
    <string name="club_video">Video</string>
    <string name="club_support_url">YouTube/Facebook Link</string>
    <string name="add_user_add_user">Add Member</string>
    <string name="add_event_add_event">Create Event</string>
    <string name="add_event_message">Are you sure to create this event?</string>
    <string name="ann_create_date">Set up date</string>
    <string name="ann_expiration_date">Expire date</string>
    <string name="quick_repair_applicant">Applicant</string>
    <string name="quick_repair_area">District</string>
    <string name="quick_repair_kind">Type</string>
    <string name="quick_repair_item">Item</string>
    <string name="confirm_to_rating">Sure to score?</string>
    <string name="rating_request">You have a scoring request</string>
    <string name="package_request">One unclaim package. Please go to service center</string>
    <string name="can_not_rating">Cannot be scored</string>
    <string name="already_rating">Scored</string>
    <string name="not_rating">Unscored</string>
    <string name="taiwan">Taiwan</string>
    <string name="philippine">Philippine</string>
    <string name="vietnam">Vietnam</string>
    <string name="indonesia">Indonesia</string>
    <string name="medical_profile">Profile</string>
    <string name="medical_symptoms">Symptom</string>
    <string name="medical_track">Follow-up and result</string>
    <string name="medical_file_upload">Upload file</string>
    <string name="medical_process">Situation</string>
    <string name="other">Other</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="staff">Member</string>
    <string name="hospital">Hospital</string>
    <string name="edit">Edit</string>
    <string name="from_gallery">Choose from photos</string>
    <string name="camera">Camera</string>
    <string name="thailand">Thailand</string>
    <string name="title">Title</string>
    <string name="chat">Chat</string>
    <string name="start_date">Start date</string>
    <string name="end_date">Finish date</string>
    <string name="can_not_get_patient">Can not get patient</string>
    <string name="room_id">RoomId</string>
    <string name="member_login">MEMBER LOGIN</string>
    <string name="language_alert">When the language is switched, the system will reopen</string>
    <string name="hockeyapp_update_mandatory_toast" translatable="false">%s is available and is a mandatory update!</string>
    <string name="hockeyapp_update_dialog_title">Update Available</string>
    <string name="hockeyapp_update_button">Update</string>
    <string name="hockeyapp_update_dialog_message">Show information about the new update?</string>
    <string name="hockeyapp_update_dialog_negative_button">Ignore</string>
    <string name="hockeyapp_update_dialog_positive_button">Show</string>
    <string name="hockeyapp_update_version_details_label" translatable="false">%1$s\n%2$s - %3$s</string>
    <string name="can_not_get_symptom">Can not get symptom</string>
    <string name="comment">comment</string>
    <string name="send">send</string>
    <string name="support">support</string>
    <string name="am">am</string>
    <string name="discussion_profile">Profile</string>
    <string name="manager_center">"Distric management Center "</string>
    <string name="customer">Customer</string>
    <string name="workerNo">ID no.</string>
</resources>