<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background2"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_apply_account_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_rect_gray"
            android:digits="@string/allow_word"
            android:hint="@string/account"
            android:textColor="#FFF"
            android:textColorHint="#FFF" />

        <EditText
            android:id="@+id/et_apply_account_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_rect_gray"
            android:hint="@string/password"
            android:textColor="#FFF"
            android:textColorHint="#FFF" />

        <EditText
            android:id="@+id/et_apply_account_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_rect_gray"
            android:hint="@string/confirm_password"
            android:textColor="#FFF"
            android:textColorHint="#FFF" />

        <TextView
            android:id="@+id/tv_apply_account_nation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_rect_gray"
            android:hint="@string/sign_up_nation"
            android:textColor="#FFF"
            android:textColorHint="#FFF" />

        <EditText
            android:id="@+id/et_apply_account_user_id_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_rect_gray"
            android:hint="@string/id_number"
            android:textColor="#FFF"
            android:textColorHint="#FFF" />

        <EditText
            android:id="@+id/et_apply_account_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_rect_gray"
            android:hint="@string/company"
            android:textColor="#FFF"
            android:textColorHint="#FFF" />

        <EditText
            android:id="@+id/et_apply_account_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_rect_gray"
            android:hint="@string/name"
            android:textColor="#FFF"
            android:textColorHint="#FFF" />

        <TextView
            android:id="@+id/tv_apply_account_user_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_rect_gray"
            android:hint="@string/sex"
            android:textColor="#FFF"
            android:textColorHint="#FFF" />

        <EditText
            android:id="@+id/et_apply_account_user_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_rect_gray"
            android:hint="@string/birthday"
            android:textColor="#FFF"
            android:textColorHint="#FFF" />

        <EditText
            android:id="@+id/et_apply_account_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_rect_gray"
            android:hint="@string/email"
            android:textColor="#FFF"
            android:textColorHint="#FFF" />

        <EditText
            android:id="@+id/et_apply_account_user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_rect_gray"
            android:hint="@string/phone"
            android:textColor="#FFF"
            android:textColorHint="#FFF" />

        <TextView
            android:id="@+id/tv_apply_account_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="10dp"
            android:background="@color/main_light_blue"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sign_up_sign_up"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>