<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_light_blue"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/profile_change_password"
        android:textColor="#FFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_dialog_profile_change_password_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_circle_corner_shallow_light_blue"
        android:hint="@string/profile_old_password"
        android:inputType="textPassword"
        android:textColor="@color/main_light_blue"
        android:textColorHint="@color/main_light_blue" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#FFF" />

    <EditText
        android:id="@+id/et_dialog_profile_change_password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_circle_corner_white"
        android:hint="@string/profile_new_password"
        android:inputType="textPassword"
        android:textColor="@color/main_light_blue"
        android:textColorHint="@color/main_light_blue" />

    <EditText
        android:id="@+id/et_dialog_profile_change_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_circle_corner_white"
        android:hint="@string/profile_confirm_new_password"
        android:inputType="textPassword"
        android:textColor="@color/main_light_blue"
        android:textColorHint="@color/main_light_blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dialog_profile_change_password_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_circle_corner_transparent_white_strock"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/cancel"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_dialog_profile_change_password_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_circle_corner_white"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/confirm"
            android:textColor="@color/main_light_blue"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>