<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background2"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manager_center"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/tv_search_center"
                style="@style/AppTheme.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/select" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/dorm"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/tv_search_dorm"
                style="@style/AppTheme.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/select" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/customer"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/tv_search_customer"
                style="@style/AppTheme.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/select" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="10dp"
                android:background="#FFF" />

            <LinearLayout
                android:id="@+id/ll_search_flabor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/workerNo"
                    android:textColor="#FFF" />

                <EditText
                    android:id="@+id/et_search_worker_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/main_edit_background"
                    android:hint="@string/workerNo"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="#FFF"
                    android:textColorHint="#FFF" />

                <TextView
                    android:id="@+id/tv_search_flabor_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/main_light_blue"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/search"
                    android:textColor="#FFF"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/name"
                    android:textColor="#FFF" />

                <TextView
                    android:id="@+id/tv_search_flabor_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/main_edit_background"
                    android:padding="10dp"
                    android:textColor="#FFF"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_search_confirm"
                style="@style/AppTheme.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/confirm" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>